# EurekAgent

./: .gitignore  README.md  pyproject.toml
.claude/hooks/: log_web_search.py  protect_result_files.py
assets/: TROUBLESHOOTING.md
docker/: Dockerfile  build.sh  setup-daemon-proxy.sh
examples/ac1/: INSTRUCTION.md  SUBMISSION_FORMAT.md  resume.sh  run.sh
examples/circle_packing/: INSTRUCTION.md  SUBMISSION_FORMAT.md  resume.sh  run.sh
examples/erdos_min_overlap/: INSTRUCTION.md  SUBMISSION_FORMAT.md  resume.sh  run.sh
examples/kernel_engineering_trimul_strict/: INSTRUCTION.md  SUBMISSION_FORMAT.md  initial.py  resume.sh  run.sh
results/: README.md
src/: __init__.py  __main__.py  artifacts.py  config.py  context_continuation.py  duration.py  gpu_cleanup.py  gpu_policy.py  graph.py  history.py  json_utils.py  pipeline.py  pricing.py  ranking.py  resume_budget.py  resume_preflight.py  run_config.py  run_status.py  runtime.py  session_map.py  stage_results.py  state.py  time_budget.py  token_tracker.py  workspace_setup.py
src/acp/: __init__.py  factory.py  protocol.py  pty_adapter.py  stream_adapter.py
src/docker/: __init__.py  adapter.py  container.py  pty_proxy.py
src/eval_grader/: client.py  gpu_helpers.py  server.py
src/monitor/: __init__.py  __main__.py  data.py  server.py
src/nodes/: __init__.py  implement_node.py  prepare_node.py  propose_node.py  routing.py
src/prompts/: __init__.py  implement.py  propose.py
src/session/: __init__.py  manager.py
src/tui/: __init__.py  app.py  terminal_report.py  theme.tcss
src/tui/screens/: __init__.py  (+2 more)
(+16 files in other folders)
