[project]
name = "eureka-loop"
version = "0.1.0"
description = "AI-for-Research auto-experiment optimization loop"
requires-python = ">=3.12.12"
dependencies = [
    "langgraph>=0.2",
    "textual>=0.50",
    "rich>=13.0",
    "uvicorn>=0.46.0",
    "fastapi>=0.136.1",
    "sse-starlette>=3.3",
    "jinja2>=3.1",
    "pandas>=3.0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
examples = ["numpy>=2.0"]
mlebench = ["pandas", "scikit-learn"]

[project.scripts]
eureka-loop = "src.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
